# CalculationMethodsLab2

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
Reports/: norms.txt  report.txt
Sources/: Defs.h  Functions.h  Main.cpp  Matrix.cpp  Matrix.h  NonlinearSolvers.cpp  NonlinearSolvers.h  PowerIteration.cpp  PowerIteration.h  QRalgorithm.cpp  QRalgorithm.h  Utils.cpp  Utils.h
